# POS_mini_Version

Backend/: README.md  pyproject.toml  render-build.sh  render-start.sh  requirements.txt
Backend/config/: settings.py  urls.py
Backend/media/categories/: Beautiful_green_surrounding.jfif
Backend/media/products/: 79_Creative_Dairy__Milk_Product_Packaging_Design.jfif  download_1.jfif
Backend/pos/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/pos/management/commands/: aggregate_hourly.py
Backend/pos/migrations/: 0001_initial.py  0002_sale_customer_name_sale_notes.py  0003_product_image.py  0004_category_product_category.py  0005_sale_tax_amount.py  0006_hourlyaggregate.py  0007_product_image_url_category_image_url.py
Frontend/aura-pos-main/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/aura-pos-main/src/: App.tsx  index.css
Frontend/aura-pos-main/src/components/pos/: AppShell.tsx  Cart.tsx  TutorialProvider.tsx
Frontend/aura-pos-main/src/components/reports/: ReportPrint.tsx
Frontend/aura-pos-main/src/pages/: Dashboard.tsx  Guide.tsx  Index.tsx  Login.tsx  POS.tsx  Products.tsx  Reports.tsx  Sales.tsx  Settings.tsx
Frontend/aura-pos-main/src/store/: pos.ts
